# fuzz-introspector

./: .gitignore  .readthedocs.yaml  README.md  code_checks.sh  plan.md  requirements.txt
.jules/: bolt.md
src/: pyproject.toml
src/fuzz_introspector/: analysis.py  analysis_parallel.py  backend_loaders.py  code_coverage.py  commands.py  constants.py  data_loader.py  debug_info.py  html_helpers.py  html_report.py  json_report.py  merge_coordinator.py  merge_intents.py  utils.py
src/fuzz_introspector/analyses/: __init__.py  calltree_analysis.py  frontend_analyser.py  optimal_targets.py  source_code_line_analyser.py
src/fuzz_introspector/datatypes/: fuzzer_profile.py  project_profile.py
src/fuzz_introspector/frontends/: frontend_c_cpp.py  frontend_go.py  frontend_jvm.py  frontend_rust.py  tree_sitter_utils.py
src/test/: test_analysis_hotspots.py  test_analysis_plugin_matrix.py  test_backend_loaders.py  test_code_coverage.py  test_data_loader.py  test_debug_correlator_backend.py  test_debug_info.py  test_debug_info_loader.py  test_frontend_analyser.py  test_frontend_callgraph_caches.py  test_frontends_cpp.py  test_frontends_go.py  test_frontends_jvm.py  test_frontends_rust.py  test_fuzzer_profile.py  test_html_report_write.py  test_html_serial_compatibility.py  test_optimal_targets.py  test_overlay_backend.py  test_pr6_json_determinism.py  test_pr6_merge_safety.py  test_pr6_parallelization.py  test_profile_accumulation.py  test_report_equivalence_script.py  test_report_phase_exclusions.py  test_tree_sitter_utils.py  test_utils.py  test_utils_coverage_cache.py
(+75 files in other folders)
