[build-system]
requires = [
  "setuptools>=65.0",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "fuzz-introspector"
version = "0.1.10"
authors = [
  { name="David Korczynski", email="david@adalogics.com" },
]
description = "Package for analyzing Fuzzing set ups."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
"beautifulsoup4==4.10.0",
"cxxfilt==0.3.0",
"lxml==5.3.0",
"matplotlib==3.10.0",
"PyYAML==6.0.2",
"soupsieve==2.2.1",
"yapf==0.40.1",
"flake8",
"pep8",
"mypy",
"psutil",
"toml",
"pytest",
"sphinx==6.0.0",
"sphinx_rtd_theme",
"configparser",
"coverage",
"setuptools>=65.5.1",
"tqdm",
"rust-demangler",
"matplotlib",
"numpy==2.1.0",
"tree-sitter>=0.25.0,<0.26.0",
"tree-sitter-python",
"networkx",
"tree-sitter-cpp",
"tree-sitter-go",
"tree-sitter-java",
"tree-sitter-rust"
]

[project.scripts]
fuzz-introspector = "fuzz_introspector.cli:main"

[project.urls]
"Homepage" = "https://github.com/ossf/fuzz-introspector"
"Bug Tracker" = "https://github.com/ossf/fuzz-introspector/issues"
